changed button colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,11 +9,11 @@ h1 {
 }
 
 .btn-group {
-    
-    width: 20%;
-    border: none;
+    height: 10%
+    width: 15%;
     text-align: center;
-    float: left;}
+    float: left;
+}
 
 .duedate {
     float: right;
