--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,18 +6,28 @@
     --danger-color: #dc3545;
     --light-color: #f8f9fa;
     --dark-color: #343a40;
+    --pastel-green: #77DD77;
+    --light-blue: #ADD8E6;
+    --navy-blue:#3d5a80;
+    --peach: #ee6c4d;
+
+
 }
 
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
-    background-color: var(--light-color);
+    background-color: var(--navy-blue);
     color: var(--dark-color);
 }
 
 header {
     padding: 5px;
+    background-color:var(--light-color)
+}
+nav{
+    background-color: #3d5a80;
 }
 
 h1 {
@@ -28,9 +38,7 @@ section {
     margin-bottom: 20px;
 }
 
-.alert-danger {
-  
-  }  
+
 
 form {
     max-width: 400px;
